[package]
name = "rust-playground"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = "*"
nalgebra-glm = "*"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.24", optional = true }
sdl2 = { version = "0.33", optional = true }

[features]
default = ["window-glutin"]
window-glutin = ["glutin", "glow/glutin"]
